<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园祝福墙</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="catagory">分类</string>
    <string name="car">购物车</string>
    <string name="personal">添加</string>
    <string name="more">更多</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">校园在线祝福</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_title">最新祝福</string>
    <string name="title_activity_cat">CatActivity</string>
    <string name="cat_title">分类查看</string>
    <string name="midd_title">罗银 的祝福</string>
    <string name="midd_cont">祝福内容</string>
    <string name="midd_cont1">祝福音乐</string>
    <string name="add_title">添加祝福</string>
    <string name="add_pick">接受人 ：</string>
    <string name="add_pick_hit">请输入接受人姓名</string>
    <string name="add_tel">手机号 ：</string>
    <string name="add_tel_hit">请输入手机号</string>
    <string name="add_music">祝福音 ：</string>
    <string name="add_send">发送人 ：</string>
    <string name="add_send_hit">请输入发送人姓名</string>
    <string name="add_info">字条内容 ：</string>
    <string name="add_info_hit">请输入字条内容</string>
    <string name="add_submit">提交祝福</string>
    <string name="about_text" formatted="false">\t校园在线点歌祝福系统是一种B/S架构的模式。在对校园学生教师生日的祝福点歌的系统。本系统将会对教师与学生生日点歌祝福以及手机播放等功能。让师生感受学校这个大家庭的温馨与关怀。
　\n\t使用该系统之后，在同时送出祝福和歌曲的时候记录送出的祝福，可以在网页中查看。 本系统的宗旨是，为了给大家提升歌曲祝福和生日互动的服务。
　\n\t点歌信息功能，它也包括了点个祝福方面的内容：
　\n\t1．对于祝福内容加上歌曲功能，让发送着选择送出的歌曲，并且同时送出祝福。
　\n\t2. 通过手机飞信功能对接受者实现通知提示功能。
　\n\t3. 发送时应保证送出全率100%，所有相应祝福歌曲链接手机接收信息确保准确。
　\n\t4. 接收时应保证接收准率100%，接收记录与给定的祝福信息，手机信息条件完全匹配。</string>
    <string name="drop_down_list_header_default_text">Click to refresh</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh</string>
    <string name="drop_down_list_header_release_text">Release to refresh</string>
    <string name="drop_down_list_header_loading_text">Loading</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    <string name="image_content">Image</string>
    <string name="title_activity_middle">MiddleActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- 版本检测文字 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="searchLable">搜索内容</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_footer">无此数据</string>
    <string name="title_activity_opinion">OpinionActivity</string>
    
    <string name="option_one">反馈类型 ：</string>
    <string name="option_two">反馈内容 ：</string>
    <string name="option_two_one">请输入你的反馈内容</string>
	<string name="option_th">联系方式 ： </string>
	<string name="option_th_one">你的姓名、手机号、邮箱等</string>
	<string name="option_submit">提交</string>
</resources>