<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#106184" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dip"
            android:text="@string/add_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="20dip" >

                <TextView
                    android:id="@+id/add_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_pick"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_pick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:layout_toRightOf="@id/add_text1"
                    android:hint="@string/add_pick_hit" />
            </RelativeLayout>
            <!-- 手机号 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/add_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_tel"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:layout_toRightOf="@id/add_text2"
                    android:hint="@string/add_tel_hit"
                    android:inputType="number"
                    android:maxLength="11" />
            </RelativeLayout>

            <!-- 祝福人 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/add_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_send"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/add_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:layout_toRightOf="@id/add_text4"
                    android:hint="@string/add_send_hit" />
            </RelativeLayout>

            <!-- 祝福音乐 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/add_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_music"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/add_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/add_text3" />
            </RelativeLayout>

            <!-- 祝福内容 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/add_text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_info"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:maxLength="70"
                    android:id="@+id/add_info"
                    android:layout_width="match_parent"
                    android:layout_height="140dip"
                    android:layout_below="@id/add_text5"
                    android:layout_marginTop="10dip"
                    android:gravity="top"
                    android:hint="@string/add_info_hit" />
            </RelativeLayout>

            <!-- 提交 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" >

                <Button
                    android:id="@+id/add_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dip"
                    android:text="@string/add_submit" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>